k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neobank
  labels:
    app.kubernetes.io/name: neobank
    app.kubernetes.io/part-of: neobank
